--- a/task002/task0002.html
+++ b/task002/task0002.html
@@ -3,11 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>task0002</title>
-<script type="text/javascript">
-	var aa=[1,1,1,1];
-aa[2]=3;
-document.write(aa);
-</script>
+
 
 
 </head>
@@ -16,6 +12,8 @@ document.write(aa);
 <input id="number2" type="text">
 <span id="result"></span>
 <button id="addbtn"></button>
+<script type="text/javascript" src="js.js">
 	
+</script>
 </body>
 </html>
